config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbxp-platform
  labels:
    app: bbxp-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbxp-web-app-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: bbxp-web-app-pod
    spec:
      containers:
      - name: bbxp-web-mvc-container
        image: <MVCIMAGE>
        ports:
        - containerPort: 8080
      - name: bbxp-web-api-container
        image: <APIIMAGE>
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: bbxp-web-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: mvc-app
    - port: 81
      targetPort: 8081
      name: api-app
  selector:
    app: bbxp-web-app-pod
