config/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: "jarredcapellman.com"
  name: bbxp-web-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: mvc-app
    - name: mvc-app-https
      port: 443
      protocol: TCP
      targetPort: 8080
    - port: 81
      targetPort: 8081
      name: api-app
  selector:
    app: bbxp-web-app-pod
