config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bbxp-web-app-service
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - jarredcapellman.com
    secretName: bbxp-tls
  rules:
  - host: jarredcapellman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bbxp-web-app-service
            port:
              number: 80
